[package]
name = "rsys"
version = "0.4.3"
authors = ["Wojciech Kępka <wojciech@wkepka.dev"]
edition = "2018"
license = "MIT"
description = "Crate for system and hardware information parsing"
readme = "README.md"
homepage = "https://github.com/wojciechkepka/rsys"
repository = "https://github.com/wojciechkepka/rsys"
keywords = ["os", "information", "macos", "linux", "system"]
categories = ["os"]

[features]
default = []
serialize = ["serde"]

[workspace]
members = [
    "rsys-cli"
]

[dependencies]
thiserror = "1"
serde_json = "1"
rsys_macro = { path = "./rsys-macro/" }
#rsys_macro = "0.1.2"
serde = {version = "1", optional = true, features = ["derive"]}
cfg-if = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winbase", "errhandlingapi", "winnt", "std", "sysinfoapi", "profileapi", "lmwksta", "powerbase", "winreg", "winerror", "minwindef"] }

[[bin]]
name = "test_common"
path = "./src/bin/test_common.rs"

[[bin]]
name = "test_linux"
path = "./src/bin/test_linux.rs"
