[package]
name = "rsys"
version = "0.5.5"
authors = ["Wojciech Kępka <wojciech@wkepka.dev"]
edition = "2018"
license = "MIT"
description = "Crate for system and hardware information parsing"
readme = "README.md"
homepage = "https://github.com/wojciechkepka/rsys"
repository = "https://github.com/wojciechkepka/rsys"
keywords = ["os", "information", "macos", "linux", "system"]
categories = ["os"]

[features]
default = []
serialize = ["serde"]

[dependencies]
thiserror = "1"
rsys_macro = { version = "0.1.2", path = "./rsys-macro/" }
serde = {version = "1", optional = true, features = ["derive"]}
cfg-if = "1"
sysctl = "0.4"


[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2.92"
nix = "0.20"

[target.'cfg(target_os = "macos")'.dependencies]
goblin = { version = "0.3", features = ["mach32", "mach64"]}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winbase", "errhandlingapi", "winnt", "std", "sysinfoapi", "profileapi", "lmwksta", "powerbase", "winreg", "winerror", "minwindef"] }

[[bin]]
name = "test_common"
path = "./src/bin/test_common.rs"

[[bin]]
name = "test_linux"
path = "./src/bin/test_linux.rs"
