[package]
name = "rsys_macro"
version = "0.1.1"
authors = ["Wojciech <wojciech@wkepka.dev>"]
edition = "2018"
license = "MIT"
description = "rsys macro library"
homepage = "https://gitlab.com/vvvxxx/rsys_macro"
repository = "https://gitlab.com/vvvxxx/rsys_macro"
keywords = ["rsys", "macro"]
categories = ["os"]

[dependencies]
proc-macro2 = "1"

[lib]
proc-macro = true

