[package]
name = "rsys_macro"
version = "0.1.2"
authors = ["Wojciech <wojciech@wkepka.dev>"]
edition = "2018"
license = "MIT"
description = "rsys macro library"
homepage = "https://github.com.com/wojciechkepka/rsys"
repository = "https://github.com.com/wojciechkepka/rsys"
keywords = ["rsys", "macro"]
categories = ["os"]

[dependencies]
proc-macro2 = "1"

[lib]
proc-macro = true

